--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <ul>
 <li><a href="https://shufengc.itch.io/eecs494-p1-loz">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
-Hello, this is Yushi Li and Shufeng Chen from group 25 and this is our project1. We implemented part of Zelda. Yushi Li mainly focused on re-implementing enemies, related collectables and the game process design. I mainly focused on designing weapons and related game process design. 
+Hello, this is Yushi Li and Shufeng Chen from group 25 and this is our project1. We implemented part of Zelda. Yushi Li mainly focused on re-implementing enemies, related collectables and the game process design. I mainly focused on designing weapons and related game process design. (Technology used: C#, Unity)
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
 </html>
