--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </ul>
 Hello, this is Yushi Li and Shufeng Chen from group 25 and this is our project1. We implemented part of Zelda. Yushi Li mainly focused on re-implementing enemies, related collectables and the game process design. I mainly focused on designing weapons and related game process design. (Technology used: C#, Unity)
 <ul>
-<li><a href="https://shufengc.itch.io/echospace">Echo Space (Unity Remaster)</a></li>
+<li><a href="https://shufengc.itch.io/echospace">Echo Space (Unity Game)</a></li>
 </ul>
 This is Shufeng Chen, this is my game for eecs494 project 2. It is an adventure game where you can explore the surroundings using echolocation. (Technology used: C#, Unity)
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
