--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@ Hello, this is Yushi Li and Shufeng Chen from group 25 and this is our project1.
 This is Shufeng Chen, this is my game for eecs494 project 2. It is an adventure game where you can explore the surroundings using echolocation. (Technology used: C#, Unity)
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
 <ul>
-<li><a href="https://shufengc.itch.io/chrono-portal-a-journey-home">Echo Space (Unity Game)</a></li>
+<li><a href="https://shufengc.itch.io/chrono-portal-a-journey-home">Chrono Portal: A Journey Home (Unity Game)</a></li>
 </ul>
 This is Shufeng Chen, this is my game for eecs494 project 3. It is an puzzle game where you can find the way out using portals. (Technology used: C#, Unity)
+  Credits: YUshi Li, Xuteng Luo, Yufan Wu, Yinghui He, Shelby Alexander
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
 </html>
