--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ This is Shufeng Chen, this is my game for eecs494 project 2. It is an adventure 
 <ul>
 <li><a href="https://shufengc.itch.io/chrono-portal-a-journey-home">Chrono Portal: A Journey Home (Unity Game)</a></li>
 </ul>
-This is Shufeng Chen, this is my game for eecs494 project 3. It is an puzzle game where you can find the way out using portals. (Technology used: C#, Unity)
+This is Shufeng Chen, this is my game for eecs494 project 3. It is an puzzle game where you can find the way out using portals. I mainly contributes to the game level designs and half of the design of the items. And the inventory UI system. (Technology used: C#, Unity)
   Credits: YUshi Li, Xuteng Luo, Yufan Wu, Yinghui He, Shelby Alexander
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
 </html>
