--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
+<li><a href="https://www.youtube.com/watch?v=pVVWkK3Cfok">P1 CSE Simulator</a></li>
+</ul>
+Hello, This is Shufeng Chen from p1-studio 13. Daniel Park and I implemented a VR simulator for CSE room. The technology used includes JIRA, Unreal Engine and Blueprints.
+<ul>
 <li><a href="https://shufengc.itch.io/eecs494-p1-loz">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 Hello, this is Yushi Li and Shufeng Chen from group 25 and this is our project1. We implemented part of Zelda. Yushi Li mainly focused on re-implementing enemies, related collectables and the game process design. I mainly focused on designing weapons and related game process design. (Technology used: C#, Unity)
