--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 <h2>Projects</h2>
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
+  
+<h3>EECS 498 003</h3>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=pVVWkK3Cfok">P1 CSE Simulator</a></li>
 </ul>
 Hello, This is Shufeng Chen from p1-studio 13. Daniel Park and I implemented a VR simulator for CSE room. The technology used includes JIRA, Unreal Engine and Blueprints.
+<h3>EECS 494</h3>
 <ul>
 <li><a href="https://shufengc.itch.io/eecs494-p1-loz">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
