--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <li><a href="https://www.youtube.com/watch?v=pVVWkK3Cfok">P1 CSE Simulator</a></li>
 </ul>
 Hello, This is Shufeng Chen from p1-studio 13. Daniel Park and I implemented a VR simulator for CSE room. The technology used includes JIRA, Unreal Engine and Blueprints.
+<ul>
+<li><a href="https://www.youtube.com/watch?v=pVVWkK3Cfok">P2 A2 GO!</a></li>
+</ul>
+Hello, This is Shufeng Chen from p2-studio 16. Noah Peters and I implemented a AR project simulating Pokemon Go. The technology used includes JIRA, Unity and Mapbox.
 <h3>EECS 494</h3>
 <ul>
 <li><a href="https://shufengc.itch.io/eecs494-p1-loz">The Legend of Zelda (Unity Remaster)</a></li>
