--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </ul>
 Hello, This is Shufeng Chen from p1-studio 13. Daniel Park and I implemented a VR simulator for CSE room. The technology used includes JIRA, Unreal Engine and Blueprints.
 <ul>
-<li><a href="https://www.youtube.com/watch?v=pVVWkK3Cfok">P2 A2 GO!</a></li>
+<li><a href="https://youtu.be/gRd3X3XWbSE">P2 A2 GO!</a></li>
 </ul>
 Hello, This is Shufeng Chen from p2-studio 16. Noah Peters and I implemented a AR project simulating Pokemon Go. The technology used includes JIRA, Unity and Mapbox.
 <h3>EECS 494</h3>
