--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
   
-<h3>EECS 498 003</h3>
+<h3>EECS 440</h3>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=pVVWkK3Cfok">P1 CSE Simulator</a></li>
 </ul>
@@ -16,6 +16,10 @@ Hello, This is Shufeng Chen from p1-studio 13. Daniel Park and I implemented a V
 <li><a href="https://m.youtube.com/watch?v=3ly3cRK-hjk">P2 A2 GO!</a></li>
 </ul>
 Hello, This is Shufeng Chen from p2-studio 16. Noah Peters and I implemented a AR project simulating Pokemon Go. The technology used includes JIRA, Unity and Mapbox.
+<ul>
+<li><a href="https://renovar.pages.dev/">P3 RENOVAR</a></li>
+</ul>
+Hello, This is Shufeng Chen from p3-studio 7. Xiang Li, Xuteng Luo, Yushi Li and I implemented a AR project helping the users to decorate their home with furniture virtually. The technology used includes meta quest, Unity and  JIRA.
 <h3>EECS 494</h3>
 <ul>
 <li><a href="https://shufengc.itch.io/eecs494-p1-loz">The Legend of Zelda (Unity Remaster)</a></li>
