Update link to 007 game engine

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <h3>EECS 498-007</h3>
 <ul>
-<li><a href="https://github.com/shufengc/L2_game_engine">L2 Game Engine</a></li>
+<li><a href="https://youtu.be/ALhzjFBiFtg">L2 Game Engine</a></li>
 </ul>
 Hello, This is Shufeng Chen. I have implemented a 2D game engine that can support physics engine. It can now support keyboard-mouse inputs and up to 2 joysticks' inputs.
 Techonologies used include C++, Lua, GLM, LuaBridge, SDL, Box2D.
