Update Havoc game

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </ul>
 Hello, This is Shufeng Chen. I have implemented a 2D game engine that can support physics engine. It can now support keyboard-mouse inputs and up to 2 joysticks' inputs.
 Techonologies used include C++, Lua, GLM, LuaBridge, SDL, Box2D.
+<ul>
+<li><a href="https://shufengc.itch.io/300-second-escape">Havoc: 300-Seconds Escape</a></li>
+</ul>
+Hello, This is Shufeng Chen. Yushi Li and I have implemented a 2D adventure game made with my own engine L2 engine. 
+In this thrilling survival game, you are the pilot of a nimble red helicopter, your rotor blades slicing through the air as you navigate an onslaught of shifting stones and towering black walls..
+Techonologies used include C++, Lua, GLM, LuaBridge, SDL, Box2D.
   
 <h3>EECS 440</h3>
 <ul>
